Update links from alx.media to agnarson.com

--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 /*
 Theme Name: Personalias
-Theme URI: http://alx.media/themes/personalias/
+Theme URI: https://agnarson.com/wpthemes/personalias/
 Version: 1.0.2
 Requires at least: 5.0
 Requires PHP: 5.6
 Tested up to: 6.0
-Description: <a href="http://alx.media/themes/personalias/">Personalias</a> is a flexible blog and magazine theme with plenty of options. The blog has a unique layout and design with sticky images to the left, which gives a visually beautiful look. You can pick header/footer color, set sidebar to the left or right and choose website max-width with a few clicks. Demo: http://demo.alx.media/x/?theme=Personalias
+Description: <a href="https://agnarson.com/wpthemes/personalias/">Personalias</a> is a flexible blog and magazine theme with plenty of options. The blog has a unique layout and design with sticky images to the left, which gives a visually beautiful look. You can pick header/footer color, set sidebar to the left or right and choose website max-width with a few clicks. Demo: https://demo.agnarson.com/?theme=Personalias
 Author: Alexander Agnarson
-Author URI: http://alx.media
+Author URI: https://agnarson.com
 Tags: blog, one-column, two-columns, right-sidebar, left-sidebar, custom-colors, custom-menu, featured-images, flexible-header, full-width-template, post-formats, sticky-post, theme-options, threaded-comments, translation-ready, custom-logo, custom-header, custom-background
 Text Domain: personalias
 
